--- a/src/View/FormBeranda.form
+++ b/src/View/FormBeranda.form
@@ -199,6 +199,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="tf_noktp">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="tf_nama">
     </Component>
